Iconをリソースへ

--- a/Maidmon/Maidmon.csproj
+++ b/Maidmon/Maidmon.csproj
@@ -32,6 +32,10 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>
+    </ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DynamicJson">
       <HintPath>..\Tvmaid\lib\DynamicJson.dll</HintPath>
